[gd_scene load_steps=16 format=3 uid="uid://chwixw10hbyl4"]

[ext_resource type="TileSet" uid="uid://bmkx88y74xjpv" path="res://world_tileset.tres" id="1_5s4ky"]
[ext_resource type="Script" uid="uid://kp5xeo2kvu56" path="res://Main.gd" id="1_dsmn6"]
[ext_resource type="TileSet" uid="uid://c2iygwuuhmliw" path="res://highlight_tileset.tres" id="1_pu24o"]
[ext_resource type="Script" uid="uid://blgy38t0at8qf" path="res://high_litghter_script.gd" id="2_357ty"]
[ext_resource type="Script" uid="uid://btxen2luetuyi" path="res://MapGenerator.gd" id="2_l4cvm"]
[ext_resource type="Script" uid="uid://bd2y5mic8tssf" path="res://camera_controller.gd" id="3_yx5f8"]
[ext_resource type="FontFile" uid="uid://d0dceg0j1riyv" path="res://Textures/Roboto-VariableFont_wdth,wght.ttf" id="4_1fv8m"]
[ext_resource type="PackedScene" uid="uid://bolw0iafnehng" path="res://Tooltip.tscn" id="8_38o5e"]
[ext_resource type="TileSet" uid="uid://domrej5h1xpe" path="res://fog_of_war_tileset.tres" id="8_o5dyj"]
[ext_resource type="Script" uid="uid://cnfmfjamxlsuh" path="res://FogOfWar.gd" id="9_d35ji"]
[ext_resource type="PackedScene" uid="uid://c3vc4a06yj8sh" path="res://Timer.tscn" id="11_dlmb4"]
[ext_resource type="Script" uid="uid://d33n26te7u2y1" path="res://context_menu.gd" id="12_0h7mo"]
[ext_resource type="Texture2D" uid="uid://g1ikn2rwt501" path="res://UI/ContextMenu/Button.png" id="12_x0ka3"]
[ext_resource type="Texture2D" uid="uid://cta680c2dg6rn" path="res://UI/ContextMenu/Button_Pressed.png" id="14_d2bti"]
[ext_resource type="Texture2D" uid="uid://c33k1hyhybnvg" path="res://UI/ContextMenu/Button_Obvodka.png" id="14_nr8wp"]

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("world_map")]
script = ExtResource("1_dsmn6")
world_map = NodePath("WorldMap")

[node name="HighLitghter" type="TileMapLayer" parent="."]
z_index = 10
texture_filter = 1
tile_set = ExtResource("1_pu24o")
collision_visibility_mode = 1
script = ExtResource("2_357ty")

[node name="PathCostLabel" type="Label" parent="HighLitghter"]
offset_right = 16.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("4_1fv8m")
theme_override_font_sizes/font_size = 4
text = "00:01"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WorldMap" type="TileMapLayer" parent="."]
texture_filter = 1
tile_set = ExtResource("1_5s4ky")
script = ExtResource("2_l4cvm")
Width = 30
Height = 25

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("tilemap_layer")]
position = Vector2(400, 200)
zoom = Vector2(5, 5)
script = ExtResource("3_yx5f8")
tilemap_layer = NodePath("../WorldMap")
min_zoom = 3.0
max_zoom = 5.0

[node name="FogOfWarTilemap" type="TileMapLayer" parent="." node_paths=PackedStringArray("world_map")]
z_index = 5
tile_set = ExtResource("8_o5dyj")
script = ExtResource("9_d35ji")
world_map = NodePath("../WorldMap")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 20

[node name="Tooltip" parent="CanvasLayer/MarginContainer" instance=ExtResource("8_38o5e")]
z_index = 300
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -115.0
offset_right = 199.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" parent="CanvasLayer/MarginContainer2" instance=ExtResource("11_dlmb4")]
layout_mode = 2

[node name="ContextMenu" type="PanelContainer" parent="."]
z_index = 300
offset_right = 24.0
offset_bottom = 18.0
scale = Vector2(0.4, 0.4)
script = ExtResource("12_0h7mo")

[node name="NinePatchRect" type="NinePatchRect" parent="ContextMenu"]
layout_mode = 2
texture = ExtResource("12_x0ka3")
patch_margin_left = 18
patch_margin_top = 9
patch_margin_right = 4
patch_margin_bottom = 9

[node name="Pressed" type="NinePatchRect" parent="ContextMenu"]
visible = false
layout_mode = 2
texture = ExtResource("14_d2bti")
patch_margin_left = 18
patch_margin_top = 9
patch_margin_right = 4
patch_margin_bottom = 9

[node name="Obvodka" type="NinePatchRect" parent="ContextMenu"]
visible = false
layout_mode = 2
texture = ExtResource("14_nr8wp")
patch_margin_left = 18
patch_margin_top = 9
patch_margin_right = 4
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="ContextMenu"]
layout_mode = 2
theme_override_constants/margin_left = 19
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="ContextMenu/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1fv8m")
theme_override_font_sizes/font_size = 10
